--- a/styles.css
+++ b/styles.css
@@ -4,34 +4,100 @@
     box-sizing: border-box;
 }
 
+
+
 body {
-    font-family: 'Poppins', sans-serif;
-    background: #fafafa;
+    background-image: linear-gradient(to bottom, #2a2c30, #424e53);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 100vh;
+    font-family: 'Bebas Neue', sans-serif;
+    color: #fff;
+    font-size: 16px;
+    line-height: 1.5;
+    font-weight: 400;
+    letter-spacing: 0.063em;
 }
 
-.wrapper {
-    max-width: 500px;
-    width: 100%;
-    background: #fff;
-    margin: 20px auto;
-    padding: 25px;
-    border-radius: 5px;
-    box-shadow: 4px 4px 2px rgba(254, 254, 254, 0.8);
+nav {
+    padding: 1em 5em;
+    color: white;
+    position: sticky;
+    z-index: 100;
+    top: 0;
+    border-bottom: 1px solid #ffffff05;
+}
+
+nav h1 {
+    font-size: 2.5rem;
+    margin-right: auto;
+}
+
+.page-content {
+    padding: 1em 5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.scoreboard-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border: 5px solid #dca11d;
+    border-radius: 0.3em;
+    padding: 0.5em 1em;
+    font-size: 2.5rem;
+    background-color: #2a2c30;
+}
+
+.score {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1em;
+}
+
+.score-num-wrapper {
+    padding: 0.5em 1em;
+    border: 3px solid #dca11d;
+    border-radius: 0.3em;
+    background-color: #2a2c30;
+}
+
+.choices-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2em;
+}
+
+.choices {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 2em;
+    gap: 1em;
 }
 
 .button {
     display: inline-block;
     padding: 10px 20px;
-    background: #2756d8;
+    background: #2a2c30;
     color: #fff;
+    border: 3px solid #dca11d;
     border-radius: 0.3em;
     text-decoration: none;
-    transition: 0.5s;
+    transition: 0.3s;
     cursor: pointer;
 }
 
 .button:hover {
-    background: #18db69;
+    color: #dca11d;
+    border: 3px solid #fff;
+    transform: scale(1.1);
+    transition: 0.1s;
 }
 
 .reset.button {
