--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ nav h1 {
     margin-right: auto;
 }
 
-nav h1:hover {
+nav > h1:hover {
     color: #dca11d;
 }
 
@@ -52,23 +52,50 @@ nav h1:hover {
     justify-content: space-between;
     border: 5px solid #dca11d;
     border-radius: 0.3em;
-    padding: 0.5em 1em;
+    padding: 0.5em;
     font-size: 2.5rem;
     background-color: #2a2c30;
+    box-shadow: 0 2px 5px 0 rgba(255, 255, 255, 0.15);
+
 }
 
 .score {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1em;
+    padding: 0 1em;
 }
 
 .score-num-wrapper {
-    padding: 0.5em 1em;
+    padding: 0.1em 1em;
     border: 3px solid #dca11d;
     border-radius: 0.3em;
     background-color: #2a2c30;
+    box-shadow: 0 2px 5px 0 rgba(255, 255, 255, 0.15);
+}
+
+.game-score {
+    transition: transform 1.5s, color 1.5s;
+    font-weight: 900;
+    font-size: 4rem;
+}
+
+.game-score.win {
+    color: #18db69;
+    
+}
+
+.choice-icon {
+    width: 2em;
+    height: 2em;
+    border-radius: 50%;
+    background-color: #2a2c30;
+    border: 3px solid #dca11d;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0.5em;
+    box-shadow: 0 2px 5px 0 rgba(255, 255, 255, 0.15);
 }
 
 .choices-wrapper {
@@ -88,7 +115,7 @@ nav h1:hover {
 
 .button {
     display: inline-block;
-    padding: 10px 20px;
+    padding: 15px 20px;
     background: #2a2c30;
     color: #fff;
     border: 3px solid #dca11d;
@@ -96,6 +123,7 @@ nav h1:hover {
     text-decoration: none;
     transition: 0.3s;
     cursor: pointer;
+    box-shadow: 0 2px 5px 0 rgba(255, 255, 255, 0.15);
 }
 
 .button:hover {
