--- a/styles.css
+++ b/styles.css
@@ -54,11 +54,12 @@ body {
     justify-content: space-between;
     border: 5px solid #dca11d;
     border-radius: 0.3em;
-    padding: 0.5em;
+    padding: 0.5em 0;
     font-size: 2.5rem;
     background-color: #2a2c30;
     box-shadow: 0 2px 5px 0 rgba(255, 255, 255, 0.15);
     margin-top: 2em;
+    min-width: 0px;
 
 }
 
@@ -85,7 +86,13 @@ body {
 
 .game-score.win {
     color: #18db69;
-    
+}
+
+.action-message-wrapper {
+    display: flex;
+    font-size: 3em;
+    margin-top: 0.5em;
+    overflow: hidden;
 }
 
 .choice-icon {
@@ -102,18 +109,16 @@ body {
 }
 
 .choices-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 2em;
+    margin-top: 1em;
 }
 
 .choices {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-top: 2em;
+    margin-top: 1em;
     gap: 1em;
+    flex-basis: 400px;
 }
 
 .button {
@@ -145,4 +150,77 @@ body {
     font-weight: 900;
     text-align: center;
     margin-bottom: 1em;
+}
+
+@keyframes pulse {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0.5;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.dots {
+    animation-name: pulse;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+
+footer {
+    margin-top: auto;
+    padding: 1em 0;
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 900;
+}
+
+footer a {
+    color: #dca11d;
+    text-decoration: none;
+}
+
+@media screen and (max-width: 768px) {
+    .landing-title {
+        font-size: 4rem;
+    }
+
+    .landing-word {
+        font-size: 4rem;
+    }
+
+    .page-content {
+        padding: 1em 2em;
+        margin-top: 5em;
+    }
+
+    .scoreboard-wrapper {
+        font-size: 2rem;
+    }
+
+    .game-score {
+        font-size: 2rem;
+    }
+
+    .action-message-wrapper {
+        font-size: 1rem;
+    }
+
+    .choices {
+        flex-basis: 300px;
+        flex-direction: column;
+    }
+
+    .button {
+        padding: 10px 15px;
+    }
+
+    #game-over-message {
+        font-size: 1.5rem;
+    }
 }
